syntax = "proto3";

package admin;
option go_package = "openmesh.io/mesh/api/admin;admin";

import "api/listener/listener.proto";
import "api/route/route.proto";
import "api/cluster/cluster.proto";

message ConfigDump {
  ConfigResources static_resources = 1;
  ConfigResources dynamic_resources = 2;
}

message ConfigResources {
  string version_info = 1;
  repeated listener.Listener listener_configs = 2;
  repeated route.RouteConfiguration route_configs = 3;
  repeated cluster.Cluster cluster_configs = 4;
}
